--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^13.0.0",
     "@testing-library/user-event": "^13.2.1",
-    "eslint": "^8.46.0",
-    "prettier": "^3.0.0",
+    "eslint": "^8.52.0",
+    "prettier": "^3.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.14.2",
@@ -19,7 +19,8 @@
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "eslint-config-prettier": "^8.9.0",
     "eslint-plugin-jest": "^27.2.3",
-    "eslint-plugin-react": "^7.33.1"
+    "eslint-plugin-react": "^7.33.1",
+    "prettier-eslint": "^16.1.2"
   },
   "scripts": {
     "start": "BROWSER=none react-scripts start",
