--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "yozu-react-boilerplate",
+  "name": "meet-and-tidy-website",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
