--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "Yozu React Skeleton",
-  "name": "Yozu React Skeleton Application",
+  "short_name": "Meet and Tidy",
+  "name": "Meet and Tidy Website",
   "icons": [
     {
       "src": "favicon.ico",
