--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "eslint-config-prettier": "^8.9.0",
     "eslint-plugin-jest": "^27.2.3",
-    "eslint-plugin-react": "^7.33.1"
+    "eslint-plugin-react": "^7.33.1",
+    "tailwindcss": "^3.4.4"
   },
   "scripts": {
     "start": "BROWSER=none react-scripts start",
